infra/k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: casino-ingress
  namespace: casino
  labels:
    app.kubernetes.io/name: casino-ingress
    app.kubernetes.io/component: networking
    app.kubernetes.io/part-of: casino-capstone
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "10"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - capstone-groupe.com
      secretName: casino-tls-secret
  rules:
    - host: capstone-groupe.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capstone
                port:
                  number: 80
